--- a/product-page.html
+++ b/product-page.html
@@ -11,9 +11,9 @@
     <div class="menu">
     <img src="images/Logo.png" alt="Logo" style="width: 264px; height: 63px; padding-top: 37px;">
     <ul class="menu-bar">
-      <a href="index-page.html"><li>Beranda</li></a>
+      <a href="index.html"><li>Beranda</li></a>
       <a href="product-page.html"><li>Produk</li></a>
-      <li>Tentang</li>
+      <a href=""><li>Tentang</li></a>
     </ul>
   </div>
   <div class="text-up-grid"><b>Recomended</b></div>
