ADD files (maap mager wkwk)

--- a/product-page.html
+++ b/product-page.html
@@ -13,7 +13,7 @@
     <ul class="menu-bar">
       <a href="index.html"><li>Beranda</li></a>
       <a href="product-page.html"><li>Produk</li></a>
-      <a href=""><li>Tentang</li></a>
+      <a href="about.html"><li>Tentang</li></a>
     </ul>
   </div>
   <div class="text-up-grid"><b>Recomended</b></div>
