--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
   <title>PT Karbut Jaya Abadi</title>
 </head>
 <body>
+  <!-- menu bar diatas -->
   <div class="menu">
     <img src="images/Logo.png" alt="Logo" style="width: 264px; height: 63px; padding-top: 37px;">
     <ul class="menu-bar">
       <a href="index.html"><li>Beranda</li></a>
-      <a href=""><li>Produk</li></a>
-      <a href=""><li>Tentang</li></a>
+      <a href="product-page.html"><li>Produk</li></a>
+      <a href="about.html"><li>Tentang</li></a>
     </ul>
   </div>
+  <!-- isi(Kenyamanan.....) -->
   <div class="isi">
     <div class="div-5">Karbut/Beranda</div> 
     <div class="kenyamanan">
@@ -27,6 +29,7 @@
       Pabrik Karpet Dalam Negeri Indonesia
     </div>
   </div>
+  <!-- tombol belanja sekarang -->
   <div class="tombol">
     <div class="div-9">Jangan asal pilih,</div>
     <div class="break"></div>
@@ -38,6 +41,8 @@
         </a>
     </div>
   </div>
+  <!-- historically ini best seller
+  sekarang isinya (kenapa...) -->
   <div class="best">
     <div class="div"></div>
     <div class="kenapa-memilih-kami-sebagai-pr">
@@ -51,6 +56,7 @@
       <li>Terbukti Berpengalaman Dalam Proyek Karpet Masjid, Hotel, Kantor Pemerintahan!</li>
     </div>
   </div>
+  <!-- gambar karper di atas footer -->
   <div class="gambar-karpet">
     <div class="kotak"></div>
     <img src="images/mehdi-messrro-a1b5GcNrRLE-unsplash 1.png" alt="karpet">
@@ -59,6 +65,7 @@
       <img src="images/kadir-celep-Nk8hqt-BgPw-unsplash 1.png" alt="karpet">
     </div>
   </div>
+  <!-- footer-->
   <div class="footer">
     <div align="left">
       <b>Hubungi Kami</b>
