--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="div-9">Jangan asal pilih,</div>
     <div class="break"></div>
     <div class="div-6">
-        <a href="" style="text-decoration: none;">
+        <a href="product-page.html" style="text-decoration: none;">
           <div class="div-7">
             <div class="div-8">Belanja Sekarang</div>
           </div>
